# Minesweeper-Clone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.code-workspace
saves/: scores.txt
